# mate-clipboard

./: README.md  meson.build
data/: gschemas.compiled  mate-clipman-autostart.desktop.in  mate-clipman.desktop.in  meson.build  org.mate.clipman.gschema.xml  org.mate.panel.ClipmanApplet.mate-panel-applet.in  org.mate.panel.applet.ClipmanAppletFactory.service.in
po/: LINGUAS  fa.po  he.po  oc.po  tr.po
src/: clipman-app.c  clipman-applet.c  clipman-history.c  clipman-item.c  clipman-manager.c  clipman-preferences.c  clipman-storage.c  clipman.h  main.c
